# ZenithLang

./: CHANGELOG.md  HaskellTesting.cabal  Zenith.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: HaskellTesting-0.1.0.0-inplace-Parser.conf  HaskellTesting-0.1.0.0-inplace-Renderer.conf  Zenith-0.1.0.0-inplace.conf  package.cache
executable/: Main.hs
src/: AstTypes.hs  Lexer.hs  Parser.hs  Renderer.hs  Simplifier.hs  TypeChecker.hs  Typer.hs  ZenithParser.hs
test/: Main.hs  RendererSpec.hs  SimplifierSpec.hs  TyperSpec.hs  ZenithParserSpec.hs
