cabal-version:      2.4
name:               HaskellTesting
version:            0.1.0.0
author:             abhashs
maintainer:         abhashshrestha@outlook.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library Parser
    default-language: Haskell2010
    hs-source-dirs: src
    exposed-modules: Parser, ZenithParser
    build-depends:  base ^>=4.14.3.0
                    , megaparsec
                    , parser-combinators
                    , text

library Renderer
    default-language: Haskell2010
    hs-source-dirs: src
    exposed-modules: Renderer
    build-depends:  base ^>=4.14.3.0
                    , megaparsec
                    , parser-combinators
                    , text
    

executable haskellTesting
    main-is:        Main.hs
    hs-source-dirs: executable
    default-language: Haskell2010
    build-depends:  base ^>=4.14.3.0
                    , megaparsec
                    , Parser
                    , Renderer
                    , text

test-suite parser-testsuite
    type:           exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:        Main.hs
    default-language: Haskell2010
    ghc-options:    -Wall
                    -threaded
    build-depends:  base
                    , megaparsec
                    , Parser
                    , Renderer
                    , hspec
                    , hspec-megaparsec
